- create all pdf screen - save pdf file - get all pdf files -refactor some ui design -add some new words in language - add done , error and loading dialog

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -32,7 +32,14 @@
     "prices_database":"قاعدة بيانات الاسعار",
     "name":"اسم",
     "address":"عنوان",
-    "phone":"رقم الهاتف"
+    "phone":"رقم الهاتف",
+    "enter_hourse_power":"أدخل قدرة الماتور بالحصان",
+    "units_number":"عدد الوحدات",
+    "unit_power":"قدرة الوحدة",
+    "number_of_operating_hours":"عدد ساعات التشغيل",
+    "enter_item_name":"أدخل اسم الجهاز"
+    
+    
 
 
 }
