- added total price in pdf - added new words to language - change app text design to OutlinedText

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -37,7 +37,8 @@
     "units_number":"عدد الوحدات",
     "unit_power":"قدرة الوحدة",
     "number_of_operating_hours":"عدد ساعات التشغيل",
-    "enter_item_name":"أدخل اسم الجهاز"
+    "enter_item_name":"أدخل اسم الجهاز",
+    "pound":"ج.م"
     
     
 
