--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -37,7 +37,8 @@
     "units_number":"Units Number",
     "unit_power":"Unit power",
     "number_of_operating_hours":"Number of operating hours",
-    "enter_item_name":"enter item name"
+    "enter_item_name":"enter item name",
+    "pound":"LE"
 
 
 
